# sym-or-num

./: Cargo.toml
docs/: ktrl-sym-or-num.txt  rust-sym-or-num.txt
src/: freq.rs  main.rs
