[package]
name = "sym-or-num"
version = "0.1.0"
authors = ["Itay Garin <thifixp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
glob = "0.3.0"
async-std = { version = "1.6.2", features = ["attributes"] }
anyhow = "1.0.32"
